# DeepSage

./: Cargo.toml  README.md  TUTORIAL.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
Formula/: deepsage.rb
bucket/: deepsage.json
notebooks/: deepsage_test.ipynb
src/: commands.rs  config.rs  download.rs  hardware.rs  main.rs  monitor.rs  proc_registry.rs  registry.rs  server.rs  tools.rs
src/backends/: llamacpp.rs  mod.rs  ollama.rs
src/tui/: app.rs  mod.rs  ui.rs
